--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>LidoJS Design Editor</title>
+  <title>CourScribe</title>
   <meta
-    content="Canva clone, design editor tool, graphic editor tool, image editor tool."
+    content="CourScribe Presentation Editor"
     name="description"
   />
   <meta
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content"
     name="viewport">
   <meta content="website" property="og:type" />
-  <meta content="LidoJS Design Editor" property="og:title" />
+  <meta content="CourScribe Presentation Editor" property="og:title" />
   <meta
-    content="Canva clone, design editor tool, graphic editor tool, image editor tool."
+    content="CourScribe Presentation Editor"
     property="og:description"
   />
   <link href="https://fonts.googleapis.com" rel="preconnect">
